# qsoft

./: .gitignore  README  index.html  params.json
Software/AutoRedux/: PSNMonitor.py  RATEHTML.py  README  checkforgrbdata.py  grabptelphot.py  qHTML.py  qRSS.py  send_gmail.py  upperlimitloop.py
Software/Cell/: CellScript.py  Migration.py  readme.md  run_all.py
Software/GRB120119A/: DustModel.py  MakePlots.py
Software/Misc/: PolarisHeartCheck  PolarisHeartCheck.py  twit
Software/MiscBin/: arxiv.py  missfits.py  nimrodel_backup.sh  q.py  qErr.py  qObs.py
Software/Modelling/: ExtinctModel.py  call_regrSpline.R  qFit.py  qSpline.py
Software/PTELCoadd/: CoaddWrap.py  PTELRename.py  pairitel_redux.swarp
Software/PTELEAC/: PTELEAC.py
Software/Phot/: PhotParse.py  absorption.py  calstar.py  extinction.py  p_phot.py  q_phot.py  scatter_plotter.py
Software/RedshiftForecasting/: .#grb_class_feature_test.R  .RData  .Rapp.history  .Rhistory  Calib_testdata.txt  Calib_traindata.txt  PopulationUnknown.txt  Table_TrainingDataEfficiency_Nat_Zprediction_4.txt  Table_TrainingDataEfficiency_UVOTonly_4.txt  Table_TrainingDataEfficiency_reduced_3.5.txt  Table_TrainingDataEfficiency_reduced_3.txt  Table_TrainingDataEfficiency_reduced_4.txt  Table_TrainingDataEfficiency_reduced_allzpredict_4.txt  Table_TrainingDataEfficiency_reduced_nozpredict_4.txt  Table_TrainingDataEfficiency_reduced_num_useless0_4.txt  Table_TrainingDataEfficiency_reduced_num_useless16_4.txt  Table_TrainingDataEfficiency_reduced_num_useless2_4.txt  Table_TrainingDataEfficiency_reduced_num_useless32_4.txt  Table_TrainingDataEfficiency_reduced_num_useless4_4.txt  Table_TrainingDataEfficiency_reduced_num_useless64_4.txt  Table_TrainingDataEfficiency_reduced_num_useless8_4.txt  Table_TrainingDataEfficiency_reduced_rem-A_4.txt  Table_TrainingDataEfficiency_reduced_rem-EP0_4.txt  Table_TrainingDataEfficiency_reduced_rem-FL_4.txt  Table_TrainingDataEfficiency_reduced_rem-MAX_SNR_4.txt  Table_TrainingDataEfficiency_reduced_rem-NH_PC_4.txt  Table_TrainingDataEfficiency_reduced_rem-PROB_Z_GT_4_4.txt  Table_TrainingDataEfficiency_reduced_rem-T90_4.txt  Table_TrainingDataEfficiency_reduced_rem-bat_image_signif_4.txt  Table_TrainingDataEfficiency_reduced_rem-bat_img_peak_4.txt  Table_TrainingDataEfficiency_reduced_rem-bat_is_rate_trig_4.txt  Table_TrainingDataEfficiency_reduced_rem-bat_trigger_dur_4.txt  Table_TrainingDataEfficiency_reduced_rem-uvot_detection_4.txt  Table_TrainingDataEfficiency_webreduced_4.txt  Table_TrainingDataPurity_Nat_Zprediction_4.txt  Table_TrainingDataPurity_UVOTonly_4.txt  Table_TrainingDataPurity_reduced_3.5.txt  Table_TrainingDataPurity_reduced_3.txt  Table_TrainingDataPurity_reduced_4.txt  Table_TrainingDataPurity_reduced_allzpredict_4.txt  (+114 more)
Software/RedshiftMachine/: ParseNatWeb.py  grb_table_1248114367.txt  redshiftmachine.arff
k_soft/PTELPL3/: PyPAIRITELfullredux.py  anet.py  (+4 more)
k_soft/PTELPL3/alignment_software/: Makefile  Makefile.in  badpixels.cc  composite  composite.cc  config.status  configure  configure.ac  hd_imview.cc  hd_imview.cfg  interactive.cc  interactive.cfg  mosaic.cfg  ncc.cfg  ncc_coarse  ncc_coarse.cc  ncc_coarse_badpix.cc  ncc_fine  ncc_fine.cc  overlay_pair  overlay_pair.cc  process  process2  simulate_images.cc  weighted_mean  weighted_mean.cc
k_soft/PTELPL3/alignment_software/email/: mail14.txt
load/: bat_catalog_100706.fits  bat_catalog_apj.671.656.fits  bat_catalog_apj.711.495.fits  grb_table_current.txt  grbredshifts.txt  h_triplestackweights.txt  j_triplestackweights.txt  k_triplestackweights.txt  latest_grb_time.txt  make_triplestack.swarp  pairitel_photo.param  pairitel_photo.sex  pairitel_redux_j.sex  pairitel_redux_k.sex  screen_backup.css  star_find.param  table.css  xrt_catalog_100706.fits
store/: gcn_rss_feed.sqlite  rate.txt
trunk/: README
(+17958 files in other folders)
